CSS HTML página índex

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GoodTravel</title>
+    <link rel="stylesheet" href="style/style_index.css">
 </head>
 
 <body>
@@ -15,41 +16,43 @@
         </div>
     </nav>
     <header>
-        <h1>
-            Tres lugares para visitar.
-        </h1>
-        <p>
-            Deja tu casa. Ve solo. Viaja ligero.
-            Lleva un mapa. Ve por tierra.
-            Cruza a pie la frontera. Escribe un diario.
-            Lee una novela sin relación con el
-            lugar en el que estés.
-            Evita usar el móvil. Haz algún amigo.
-            – Paul Theroux
-        </p>
+        <div>
+            <h1>
+                Tres lugares para visitar
+            </h1>
+            <p>
+                Deja tu casa. Ve solo. Viaja ligero.
+                Lleva un mapa. Ve por tierra.
+                Cruza a pie la frontera. Escribe un diario.
+                Lee una novela sin relación con el
+                lugar en el que estés.
+                Evita usar el móvil. Haz algún amigo.
+                – Paul Theroux
+            </p>
+        </div>        
     </header>
     <main>
         <section class="frase">
-            <h2>“El mundo es un libro y aquellos que no viajan leen solo una página”.</h2>
-            <cite>– Agustín de Hipona</cite>
+            <h2>“El mundo es un libro y aquellos que no viajan leen solo una página”. – Agustín de Hipona</h2>
         </section>
         <section class="lugaresVisitar">
-            <div>
-                <h2>Alemania</h2>
-                <a>Ver mas</a>
+            <div class="lugar1">
+                <a><h2>Alemania</h2></a>
+                </a><a class="btn-ver-mas">Ver más</a>
                 <p>Castillo de Neuschwanstein</p>
             </div>
-            <div>
-                <h2>Islandia</h2>
-                <a>Ver mas</a>
+            <div class="lugar2">
+                <a><h2>Islandia</h2></a>
+                <a class="btn-ver-mas">Ver más</a>
                 <p>Lago Azul</p>
             </div>
-            <div>
-                <h2>Noruega</h2>
-                <a>Ver mas</a>
+            <div class="lugar3">
+                <a><h2>Noruega</h2></a>
+                <a class="btn-ver-mas">Ver más</a>
                 <p>Fiordo de Geirangerfjord</p>
             </div>
         </section>
+        
     </main>
     <footer>
         <p>
