Correciones en dimeciones

--- a/Index.html
+++ b/Index.html
@@ -38,17 +38,23 @@
         <section class="lugaresVisitar">
             <div class="lugar1">
                 <a><h2>Alemania</h2></a>
-                </a><a class="btn-ver-mas">Ver más</a>
+                <div class="btn-ver-mas">
+                    <a>Ver más</a>
+                </div>
                 <p>Castillo de Neuschwanstein</p>
             </div>
             <div class="lugar2">
                 <a><h2>Islandia</h2></a>
-                <a class="btn-ver-mas">Ver más</a>
+                <div class="btn-ver-mas">
+                    <a>Ver más</a>
+                </div>
                 <p>Lago Azul</p>
             </div>
             <div class="lugar3">
                 <a><h2>Noruega</h2></a>
-                <a class="btn-ver-mas">Ver más</a>
+                <div class="btn-ver-mas">
+                    <a >Ver más</a>
+                </div>
                 <p>Fiordo de Geirangerfjord</p>
             </div>
         </section>
