Asignando rutas temporales

--- a/Index.html
+++ b/Index.html
@@ -7,12 +7,11 @@
     <title>GoodTravel</title>
     <link rel="stylesheet" href="style/style_index.css">
 </head>
-
 <body>
     <nav>
         <div>
-            <a>Inicio</a>   
-            <a>GoodTravel</a>
+            <a href="Index.html">Inicio</a>   
+            <a href="Index.html">GoodTravel</a>
         </div>
     </nav>
     <header>
@@ -37,28 +36,27 @@
         </section>
         <section class="lugaresVisitar">
             <div class="lugar1">
-                <a><h2>Alemania</h2></a>
+                <a href="publicaciones/publicacion1.html"><h2>Alemania</h2></a>
                 <div class="btn-ver-mas">
-                    <a>Ver más</a>
+                    <a href="publicaciones/publicacion1.html">Ver más</a>
                 </div>
                 <p>Castillo de Neuschwanstein</p>
             </div>
             <div class="lugar2">
-                <a><h2>Islandia</h2></a>
+                <a href="publicaciones/publicacion2.html"><h2>Islandia</h2></a>
                 <div class="btn-ver-mas">
-                    <a>Ver más</a>
+                    <a href="publicaciones/publicacion2.html">Ver más</a>
                 </div>
                 <p>Lago Azul</p>
             </div>
             <div class="lugar3">
-                <a><h2>Noruega</h2></a>
+                <a href="publicaciones/publicacion3.html"><h2>Noruega</h2></a>
                 <div class="btn-ver-mas">
-                    <a >Ver más</a>
+                    <a href="publicaciones/publicacion3.html">Ver más</a>
                 </div>
                 <p>Fiordo de Geirangerfjord</p>
             </div>
-        </section>
-        
+        </section>        
     </main>
     <footer>
         <p>
